Fix overflowing images in cards

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -114,3 +114,8 @@ blockquote {
     -webkit-appearance: none;
     -moz-appearance: none;
 }
+
+.card-body img {
+  max-width: 100%;
+  height: auto;
+}
